# briteverify-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.github/workflows/: tests.yml
examples/: account-balance.rs  bulk-verification.rs  single-verification.rs
src/: client.rs  errors.rs  lib.rs  utils.rs
src/types/: account.rs  bulk.rs  enums.rs  mod.rs  single.rs
tests/: account_balance.rs  bulk_verification.rs  client_internals.rs  official_api_docs.rs  single_transaction.rs
tests/resources/: api-docs.postman-collection.json  api-docs.postman-url.md
tests/utils/: mod.rs  v1_mock_data.rs  v3_mock_data.rs
