[package]

name = "briteverify-rs"
version = "0.0.4"
description = "Rust client library for the BriteVerify API Suite"
license = "AGPL-3.0-or-later"
edition = "2021"
authors = ["Mark S. <the@wondersmith.dev>"]

readme = "README.md"
homepage = "https://github.com/the-wondersmith/briteverify-rs"
repository = "https://github.com/the-wondersmith/briteverify-rs"
documentation = "https://docs.rs/crate/briteverify-rs/latest"

keywords = ["briteverify", "client", "reqwest", "verification"]
categories = ["web-programming::http-client", "api-bindings", "asynchronous", "email"]

[[example]]
name = "account-balance"
crate-type = ["bin"]

[[example]]
name = "bulk-verification"
crate-type = ["bin"]

[[example]]
name = "single-verification"
crate-type = ["bin"]

[dependencies]

http = "^0.2"
anyhow = "^1"
futures = "^0.3"
tracing = "^0.1"
thiserror = "^1"
serde_json = "^1"
itertools = "^0.10"
futures-util = "^0.3"
typed-builder = "^0.14"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["std", "alloc", "derive"]}
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "json", "brotli", "stream", "rustls-tls"] }

# Optional Dependencies (Required For Examples)
strum = { version = "^0.24", optional = true }
once_cell = { version = "^1.17", optional = true }
strum_macros = { version = "^0.24", optional = true }
warlocks-cauldron = { version = "^0.26", optional = true, features = ["en"] }
uuid = { version = "^1.3", optional = true, features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]

rstest = "^0.17"
serde_test = "^1"
wiremock = "^0.5"
pretty_assertions = "^1.3"
strum = { version = "^0.24", optional = false }
tokio = { version = "^1.25", features = ["full"] }
once_cell = { version = "^1.17", optional = false }
strum_macros = { version = "^0.24", optional = false }
warlocks-cauldron = { version = "^0.26", optional = false, features = ["en"] }
uuid = { version = "^1.3", optional = false, features = ["v4", "fast-rng", "macro-diagnostics"] }

[features]

examples = ["uuid", "strum", "once_cell", "strum_macros", "warlocks-cauldron"]
