[package]

name = "briteverify-rs"
version = "0.1.1"
description = "Rust client library for the BriteVerify API Suite"
license = "AGPL-3.0-or-later"
edition = "2021"
authors = ["Mark S. <the@wondersmith.dev>"]

readme = "README.md"
homepage = "https://github.com/the-wondersmith/briteverify-rs"
repository = "https://github.com/the-wondersmith/briteverify-rs"
documentation = "https://docs.rs/briteverify-rs/latest/briteverify_rs/"

keywords = ["briteverify", "client", "reqwest", "verification"]
categories = ["web-programming::http-client", "api-bindings", "asynchronous", "email"]


[[example]]

name = "account-balance"
crate-type = ["bin"]
required-features = ["cli"]

[[example]]

name = "bulk-verification"
crate-type = ["bin"]
required-features = ["cli"]

[[example]]

name = "single-verification"
crate-type = ["bin"]
required-features = ["cli"]


[dependencies]

url = "^2"
http = "^0.2"
anyhow = "^1"
futures = "^0.3"
thiserror = "^1"
serde_json = "^1"
visible = "^0.0.1"
itertools = "^0.11"
futures-util = "^0.3"
futures-timer = "^3.0"
chrono = { version = "^0.4", features = ["serde"] }
log = { version = "^0.4", features = ["kv_unstable_serde"] }
serde = { version = "^1", features = ["std", "alloc", "derive"]}
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "json", "brotli", "stream", "rustls-tls"] }

# Optional Dependencies (for enhanced visibility)
instrumentation = { version = "^0.1", package = "tracing", optional = true }

# Optional Dependencies (required for examples)
env_logger = { version = "^0.10", optional = true }
tokio = { version = "^1.27", optional = true, features = ["full"] }
clap = { version = "^4.2", optional = true, features = ["env", "cargo", "derive"] }


[dev-dependencies]

rand = "^0.8"
regex = "^1.8"
rstest = "^0.18"
serde_test = "^1"
test-log = "^0.2"
wiremock = "^0.5"
once_cell = "^1.17"
tokio-test = "^0.4"
http-types = "^2.12"
pretty_assertions = "^1.3"
uuid = { version = "^1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }

env_logger = { version = "^0.10", optional = false }
tokio = { version = "^1.27", optional = false, features = ["full"] }


[patch.crates-io]  # temporary override

serde_test = { git = "https://github.com/the-wondersmith/serde-test.git", branch = "feat-public-ser-and-de-modules" }


[features]

ci = []
default = []
tracing = ["instrumentation"]
cli = ["clap", "tokio", "env_logger"]

